[package]
name = "big_unsigned_ints"
version = "0.1.0"
authors = ["0xSilene <51803887+0xSilene@users.noreply.github.com>"]
edition = "2018"
description = "A Crate For Big Unsigned Integers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
