[package]
name = "big_unsigned_ints"
version = "0.1.3"
authors = ["0xSilene <51803887+0xSilene@users.noreply.github.com>"]
edition = "2018"
description = "A Crate For Big Unsigned Integers ranging from U256 to U2048 using u64 arrays all under a fixed-size of 32"
repository = "https://github.com/0xSilene/big_unsigned_ints/tree/master"
keywords = ["BigInts", "Type","u8","conversion","bytes"]
license = "Apache-2.0 AND MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
