[package]
name = "big_unsigned_ints"
version = "0.1.6"
authors = ["0xAtropine"]
edition = "2018"
description = "A Crate For Big Unsigned Integers ranging from U256 to U2048 using u64 arrays all under a fixed-size of 32"
repository = "https://github.com/0xAtropine/big_unsigned_ints/tree/master"
keywords = ["BigInts", "Type","u8","conversion","bytes"]
readme = "README.md"
license = "Apache-2.0 AND MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
